--- a/app/views/student_profiles/index.html.erb
+++ b/app/views/student_profiles/index.html.erb
@@ -1,5 +1,14 @@
 <p id="notice"><%= notice %></p>
 
+<% if user_signed_in? %>
+    <li><%= link_to "New Student Profile", new_student_profile_path, class: "active" %></li>
+    <li><%= link_to "Account", edit_user_registration_path %></li>
+    <li><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
+<% else %>
+    <li><%= link_to "Sign Up", new_user_registration_path, class: "active" %></li>
+    <li><%= link_to "Sign In", new_user_session_path, class: "active" %></li>
+<% end %>
+
 <h1>Student Profiles</h1>
 
 <table>
@@ -30,4 +39,3 @@
 
 <br>
 
-<%= link_to 'New Student Profile', new_student_profile_path %>
