--- a/app/views/student_profiles/show.html.erb
+++ b/app/views/student_profiles/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<%= image_tag @student_profile.image.url(:medium) %>
 <p>
   <strong>Name:</strong>
   <%= @student_profile.name %>
